logs/20251024_130608.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Particle.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Particle.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Particle.PS.hlsl,profike:ps_6_0

Particle.PS.hlsl:20:16: error: cannot initialize a variable of type 'vector<float32_t, 4>' with an lvalue of type 'vector<float, 2>'
    float32_t4 uv = uv4.xy;
               ^    ~~~~~~

